Project

General

Profile

Actions

Bug #20931

closed

rgw opslog can not record remote_addr

Added by Jiaying Ren over 6 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

env:

vstart.sh created cluster, lasted master version.

create a bucket with s3cmd,the check rgw ops log:

root@ceph-node1# (git::master) ./bin/radosgw-admin -c ceph.conf log show --object=2017-08-07-15-22a3192b-7fea-45e5-884f-e5fb426ae693.4106.1-111 {
"bucket_id": "22a3192b-7fea-45e5-884f-e5fb426ae693.4106.1",
"bucket_owner": "testid",
"bucket": "111",
"log_entries": [ {
"bucket": "111",
"time": "2017-08-07 07:16:55.362918Z",
"time_local": "2017-08-07 15:16:55.362918",
"remote_addr": "",
"user": "testid",
"operation": "PUT",
"uri": "/111/",
"http_status": "200",
"error_code": "",
"bytes_sent": 0,
"bytes_received": 0,
"object_size": 0,
"total_time": 1895625,
"user_agent": "",
"referrer": ""
}
],
"log_sum": {
"bytes_sent": 0,
"bytes_received": 0,
"total_time": 1895625,
"total_entries": 1
}
}

remote addr is empty

Actions #1

Updated by Jiaying Ren over 6 years ago

fixed:

root@ceph-node1# (git::master) ./bin/radosgw-admin -c ceph.conf log show --object=2017-08-07-15-7d4b3b73-fcaf-47b5-9300-c9a3470eed1e.4106.1-111
2017-08-07 15:25:27.036220 7f8adf579c40 -1 WARNING: all dangerous and experimental features are enabled.
2017-08-07 15:25:27.036536 7f8adf579c40 -1 WARNING: all dangerous and experimental features are enabled.
2017-08-07 15:25:27.060099 7f8adf579c40 -1 WARNING: all dangerous and experimental features are enabled. {
"bucket_id": "7d4b3b73-fcaf-47b5-9300-c9a3470eed1e.4106.1",
"bucket_owner": "testid",
"bucket": "111",
"log_entries": [ {
"bucket": "111",
"time": "2017-08-07 07:25:01.996330Z",
"time_local": "2017-08-07 15:25:01.996330",
"remote_addr": "127.0.0.1",
"user": "testid",
"operation": "PUT",
"uri": "/111/",
"http_status": "200",
"error_code": "",
"bytes_sent": 0,
"bytes_received": 0,
"object_size": 0,
"total_time": 2008782,
"user_agent": "",
"referrer": ""
}
],
"log_sum": {
"bytes_sent": 0,
"bytes_received": 0,
"total_time": 2008782,
"total_entries": 1
}
}

https://github.com/ceph/ceph/pull/16860

Actions #2

Updated by Jos Collin over 6 years ago

  • Status changed from New to In Progress
Actions #3

Updated by Sage Weil almost 3 years ago

  • Project changed from Ceph to rgw
Actions #4

Updated by Casey Bodley over 2 years ago

  • Status changed from In Progress to Resolved
Actions

Also available in: Atom PDF