rgw: fix opslog can not record remote_addr

Fixes: http://tracker.ceph.com/issues/20931

Now the bucket logging entry likes:
tester 555 [10/Aug/2017:15:50:15 +0800] 127.0.0.1 tester
tx000000000000000000005-00598c1037-1027-default GET - /555/ 200 - 257 0
0.000417 - - - -
tester 555 [10/Aug/2017:15:50:29 +0800] 127.0.0.1 tester
tx000000000000000000006-00598c1045-1027-default PUT tester.s3cfg
/555/tester.s3cfg 200 - 0 1904 0.044687 - - - -

Reported-by: Zhang Shaowen <zhangshaowen@cmss.chinamobile.com>
Signed-off-by: Jiaying Ren <jiaying.ren@umcloud.com>